--- a/src/styles/transition.css
+++ b/src/styles/transition.css
@@ -1,15 +1,15 @@
 /* Page transition animations with Swup */
 html.is-changing .transition-swup-fade {
-    @apply transition-all duration-200
+    @apply transition-all duration-200 ease-in-out; /* Added easing */
 }
 html.is-animating .transition-swup-fade {
-    @apply opacity-0 translate-y-4
+    @apply opacity-0 translate-y-3; /* Slightly less translation */
 }
 
 /* Fade-in animations for components */
 @keyframes fade-in-up {
     0% {
-        transform: translateY(2rem);
+        transform: translateY(1.5rem); /* Slightly less translation */
         opacity: 0;
     }
     100% {
@@ -21,33 +21,32 @@ html.is-animating .transition-swup-fade {
 /* Main components */
 .onload-animation {
     opacity: 0;
-    animation: 300ms fade-in-up;
+    animation: 250ms fade-in-up; /* Slightly faster */
     animation-fill-mode: forwards;
 }
 #navbar {
     animation-delay: 0ms
 }
 #sidebar {
-    animation-delay: 100ms
+    animation-delay: 50ms /* Faster delay */
 }
 #swup-container {
     outline: none;
 }
 #content-wrapper {
-    animation-delay: var(--content-delay);
+    animation-delay: var(--content-delay); /* Uses variable, can be adjusted in variables.styl */
 }
 .footer {
-    animation-delay: 250ms;
+    animation-delay: 200ms; /* Faster delay */
 }
 #banner-credit {
-    animation-delay: 400ms;
+    animation-delay: 300ms; /* Faster delay */
 }
 
-/* Post content */
+/* Post content - these delays are fine, will be relative to --content-delay */
 #post-container :nth-child(1) { animation-delay: calc(var(--content-delay) + 0ms) }
-#post-container :nth-child(2) { animation-delay: calc(var(--content-delay) + 50ms) }
-#post-container :nth-child(3) { animation-delay: calc(var(--content-delay) + 100ms) }
-#post-container :nth-child(4) { animation-delay: calc(var(--content-delay) + 175ms) }
-#post-container :nth-child(5) { animation-delay: calc(var(--content-delay) + 250ms) }
-#post-container :nth-child(6) { animation-delay: calc(var(--content-delay) + 325ms) }
-
+#post-container :nth-child(2) { animation-delay: calc(var(--content-delay) + 40ms) }
+#post-container :nth-child(3) { animation-delay: calc(var(--content-delay) + 80ms) }
+#post-container :nth-child(4) { animation-delay: calc(var(--content-delay) + 120ms) }
+#post-container :nth-child(5) { animation-delay: calc(var(--content-delay) + 160ms) }
+#post-container :nth-child(6) { animation-delay: calc(var(--content-delay) + 200ms) }
